// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlatformActions Should return response content for createExport method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "id": undefined,
      },
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_CREATE",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {},
      "payload": Promise {},
      "type": "GET_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExportsStatus method: dispatch object 1`] = `
[
  [
    {
      "meta": {},
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for removeExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {},
      "payload": Promise {},
      "type": "DELETE_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;
